security: remove sensitive data and improve configuration

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,12 @@ local.properties
 !debug.keystore
 .kotlin/
 
+# Android signing keys and sensitive files
+android/app/my-release-key.keystore
+android/app/*.keystore
+android/app/release/
+android/app/debug/
+
 # node.js
 #
 node_modules/
@@ -73,3 +79,11 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Environment variables and sensitive configuration
+.env
+.env.local
+.env.development
+.env.production
+config/local.js
+config/production.js
