--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,7 +37,11 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Android signing configuration
+# IMPORTANT: Set these values in your local environment or CI/CD pipeline
+# DO NOT commit actual passwords to version control
 MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
 MYAPP_RELEASE_KEY_ALIAS=my-key-alias
-MYAPP_RELEASE_STORE_PASSWORD=REMOVED_PASSWORD
-MYAPP_RELEASE_KEY_PASSWORD=REMOVED_PASSWORD
+# MYAPP_RELEASE_STORE_PASSWORD=your_store_password_here
+# MYAPP_RELEASE_KEY_PASSWORD=your_key_password_here
